--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -19,7 +19,7 @@
 	{% includeCssFile "css/owl.carousel.min.css" %}
 	{% includeCssFile "css/owl.theme.default.min.css" %}
 	{% includeCssFile "css/owl.theme.green.min.css" %}
-	{% includeCssFile "css/normalize.css" %}
+	{% includeCssFile "css/normalize.min.css" %}
 	{% includeCssFile "css/font.css" %}
 	{% includeCssFile "css/style.min.css" %}
 </head>
@@ -36,7 +36,7 @@
 {% includeJsFile "https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" %}
 {% includeJsFile "js/instafeed.min.js" %}
 {% includeJsFile "js/owl.carousel.min.js" %}
-{% includeJsFile "js/jquery.sticky.js" %}
+{% includeJsFile "js/jquery.sticky.min.js" %}
 {% includeJsFile "https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js" %}
 {% includeJsFile "js/main.min.js" %}
 </body>
