--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -39,5 +39,17 @@
 {% includeJsFile "js/jquery.sticky.min.js" %}
 {% includeJsFile "https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js" %}
 {% includeJsFile "js/main.min.js" %}
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-97575832-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
 </body>
 </html>
