--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -192,11 +192,9 @@ twitter
 
 <!-- instagram feed slideshow -->
 <section class="slideshow">
-    <div style="display: none;">
-        <div id="instafeed" style="display: none;"></div>
+    <div id="instafeed" class="owl-carousel owl-theme">
+
     </div>
-<div id="owl1" class="owl-carousel owl-theme">
-</div>
 </section>
 <!-- instagram feed slideshow -->
 
