--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -21,7 +21,7 @@
 	{% includeCssFile "css/owl.theme.green.min.css" %}
 	{% includeCssFile "css/normalize.min.css" %}
 	{% includeCssFile "css/font.css" %}
-	{% includeCssFile "css/style.css" %}
+	{% includeCssFile "css/style.min.css" %}
 </head>
 <body id ="waypointschild" class="planecursor">
 	<div id="container">
@@ -38,7 +38,7 @@
 {% includeJsFile "js/owl.carousel.min.js" %}
 {% includeJsFile "js/jquery.sticky.min.js" %}
 {% includeJsFile "https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js" %}
-{% includeJsFile "js/main.js" %}
+{% includeJsFile "js/main.min.js" %}
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
