--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -38,7 +38,7 @@
 {% includeJsFile "js/owl.carousel.min.js" %}
 {% includeJsFile "js/jquery.sticky.min.js" %}
 {% includeJsFile "https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js" %}
-{% includeJsFile "js/main.min.js" %}
+{% includeJsFile "js/main.js" %}
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
