--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -192,7 +192,7 @@ twitter
 
 <!-- instagram feed slideshow -->
 <section class="slideshow">
-    <div id="instafeed" class="owl-carousel owl-theme" style="height: 356px;">
+    <div id="instafeed" class="owl-carousel owl-theme">
 
     </div>
 </section>
