--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1183,6 +1183,7 @@ footer{
 .close-modal{
     background-image: url(../img/close-up-modal.svg);
     background-color: transparent;
+    background-repeat: no-repeat;
     border: 0;
     width: 28px;
     height: 28px;
