--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1345,7 +1345,7 @@ body.fixedwaypoint{
 
 .contact-item-text.left{
     position: relative !important;
-    top: -9px;
+    top: -8px;
     left: 0;
 }
 
@@ -2655,6 +2655,7 @@ section.menu {
 
 .contact-item-text.left span:before {
     font-size: 16px;
+    line-height: 16px;
 }
 
 .contact-item-text {
