--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -21,7 +21,7 @@
 	{% includeCssFile "css/owl.theme.green.min.css" %}
 	{% includeCssFile "css/normalize.min.css" %}
 	{% includeCssFile "css/font.css" %}
-	{% includeCssFile "css/style.min.css" %}
+	{% includeCssFile "css/style.css" %}
 </head>
 <body id ="waypointschild" class="planecursor">
 	<div id="container">
