--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,11 @@
 
 /*thicker fonts*/
 
+html {
+  -ms-overflow-style: -ms-autohiding-scrollbar;
+}
+
+
 @font-face {
   font-family: 'AvenirLTStdHeavyObliquethick';
   src: url('avheavy/AvenirLTStd-HeavyOblique.eot');
@@ -1921,7 +1926,7 @@ nav a{
 
 }
 
-@media only screen and (max-width: 1080px) {
+@media only screen and (max-width: 1200px) {
 
 .modal{
     width: 80%;
