--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -124,7 +124,7 @@ twitter
 <div class="schedule">
 <div class="hours">
 
-{% for scheduleitems in craft.entries.section('topScheduleModule') %}
+{% for topScheduleitems in craft.entries.section('topScheduleModule') %}
 {{ topScheduleitems.line1 }}
 <!-- <br> -->
 {{ topScheduleitems.line2 }}
