--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3111,6 +3111,11 @@ right: 0;
 
 /*960*/
 
+
+.schedule-items.top .schedule .address p{
+  margin-top: 0;
+}
+
 @media only screen and (max-width: 960px) {
 
 
