--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3078,7 +3078,7 @@ right: 0;
 
 .schedule-items.top .schedule .hours{
     font-size: 16.5px;
-    color: rgb(247, 209, 81);
+    color: #fde66c;
     font-style: oblique;
     font-family: AvenirLTStdHeavyObliquethick;
     margin-bottom: 0;
