--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3144,4 +3144,6 @@ right: 0;
 
 .schedule-items.top .schedule .address p{
   margin-top: 0;
+      line-height: 26px;
+          padding-top: 20px;
 }
