--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3148,6 +3148,6 @@ right: 0;
           padding-top: 20px !important;
 }
 
-.schedule-items.top .schedule .hours{
+.schedule-items.top .schedule .hours p{
   margin-top: 20px !important;
 }
