--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2287,7 +2287,7 @@ margin-top: -25px;
 }
 
 #instafeed .owl-item{
-    width: 360px !important;
+    /*width: 360px !important;*/
 }
 
 
@@ -3041,9 +3041,9 @@ background: transparent;
 }
 
 
-#instafeed{
+/*#instafeed{
     height: 348px;
-}
+}*/
 
 }
 
@@ -3182,3 +3182,15 @@ right: 0;
 .schedule-items.top .schedule .hours p{
   margin-top: 10px !important;
 }
+
+
+/*@media only screen and (max-width: 660px) {
+
+#instafeed .owl-item{
+  width: 100%;
+}
+#instafeed .owl-item img{
+    width: 100% !important;
+}
+
+}*/
