--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -186,6 +186,10 @@ twitter
 </div>
 <div class="address">
 {{ scheduleitems.line3Bottom }}
+
+<br>
+{{ scheduleitems.line3Bottom|slice(0, 10) }}
+
 </div>
 
 {% endfor %}
