--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3185,6 +3185,9 @@ right: 0;
 
 @media only screen and (max-width: 360px) {
 
+
+.schedule .hours,
+.schedule .address,
 .hours p,
 .address p{
 font-size: 12px;
