--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -187,8 +187,8 @@ twitter
 <div class="address">
 {{ scheduleitems.line3Bottom }}
 
-<br>
-{{ scheduleitems.line3Bottom|slice(0, 10) }}
+<!-- <br> -->
+<!-- {{ scheduleitems.line3Bottom|slice(0, 10) }} -->
 
 </div>
 
