--- a/craft/templates/privacy/index.html
+++ b/craft/templates/privacy/index.html
@@ -11,16 +11,13 @@
  #}
 
 {% extends "_layout" %}
-{% set title = "News" %}
+{% set title = "Privacy Policy" %}
 
 {% block content %}
 	<h1>News</h1>
 	{% for entry in craft.entries.section('privacy').find() %}
 		<article>
-			<h3><a href="{{ entry.url }}">{{ entry.title }}</a></h3>
-			<p>Posted on {{ entry.postDate.format('F d, Y') }}</p>
 			{{ entry.body.getPage(1) }}
-			<p><a href="{{ entry.url }}">Continue reading</a></p>
 		</article>
 	{% endfor %}
 {% endblock %}
