--- a/craft/templates/privacy/index.html
+++ b/craft/templates/privacy/index.html
@@ -14,7 +14,7 @@
 {% set title = "Privacy Policy" %}
 
 {% block content %}
-	<h1>News</h1>
+	<h1>Privacy Policy</h1>
 	{% for entry in craft.entries.section('privacy').find() %}
 		<article>
 			{{ entry.body.getPage(1) }}
