--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -630,6 +630,7 @@ height: 100%;
 </div>
 <div class="item-description">
 {{ member.body }}
+{{ member.ourFamilyPlainText }}
 </div>
 </div>
 </div>
