--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -65,6 +65,27 @@ twitter
 </a>
 </li>
 {% endfor %}
+
+<div style="display:none;">
+    <ul class="social-links">
+
+
+{% for socialItem in craft.entries.section('socialLinks') %}
+<li>
+<a target="_blank" href="{{ socialItem.linkUrl }}">
+twitter
+{{ socialItem.title }}
+{% for asset in socialItem.image %}
+    <img src="{{ asset.url }}">
+{% endfor %}
+</a>
+</li>
+{% endfor %}
+
+    </ul>
+</div>
+
+
 </ul>
 </div>
 
