--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -32,7 +32,12 @@
 		<footer id="footer">
 				<img class="logo" src="img/logo.svg" alt="">
 
-<div style="display:none;">
+
+<div style="width: 100%;position: relative;">
+
+
+
+<div style="display:none;position: absolute;left: 50%;">
     <ul class="social-links">
 
 
@@ -50,6 +55,11 @@ twitter
 
     </ul>
 </div>
+
+
+
+</div>
+
 
 
 		</footer>
