--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -33,11 +33,11 @@
 				<img class="logo" src="img/logo.svg" alt="">
 
 
-<div style="width: 100%;position: relative;">
+<div style="">
 
 
 
-<div style="display:none;position: absolute;left: 50%;">
+<div class="footer-social">
     <ul class="social-links">
 
 
