--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3141,6 +3141,11 @@ right: 0;
 
 }
 
+
+.footer-social{
+  display: none;
+}
+
 @media only screen and (max-width: 768px) {
 
 .events-booking, .find-us, section.menu {
@@ -3175,6 +3180,32 @@ right: 0;
   padding: 0 !important;
   margin: 0 !important;
   font-size: 0 !important;
+}
+
+footer{
+    background: #324144;
+    padding-top: 40px;
+    padding-bottom: 80px;
+    text-align: center;
+}
+
+.footer-social{
+  position: absolute;
+  left: 50%;
+  width: 100px;
+  background: pink;
+  margin-left: -50px;
+  margin-top: 62px;
+  background: #324144;
+  display: block;
+}
+
+.social-links{
+      float: left;
+    margin-right: 0;
+    padding-left: 0 !important;
+    width: 100px;
+    background: #324144;
 }
 
 }
