--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1510,13 +1510,12 @@ width: 100%;
 
 
 
-
 .announcements{
-
     color: rgb(66, 89, 96);
     font-size: 15px;
     margin: 0 auto;
     padding-top: 20px;
+    padding-top: 10px;
     padding-bottom: 1px;
     width: 100%;
     text-align: center;
