--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -496,6 +496,13 @@ height: 100%;
 <div class="events-booking-text-box">
 
 {{ block.eventsbookingDescription }}
+
+
+<div id="recipient_email" style="display:none;">
+{{ block.eventsbookingRecipientEmail }}
+</div>
+
+
 </div>
 </div>
 
