--- a/public/css/style.css
+++ b/public/css/style.css
@@ -606,8 +606,7 @@ display: block
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-    background-position: -1px;
-
+  background-position: -1px;
 }
 
 
@@ -3148,7 +3147,7 @@ right: 0;
 
 .events-booking, .find-us, section.menu {
     background-repeat: repeat;
-    background-size: contain;
+    /*background-size: contain;*/
     background-attachment: initial;
     background-position: top;
 }
@@ -3232,3 +3231,48 @@ font-size: 12px;
 
 
 }
+
+
+
+.contact-item-text span,
+.contact-item-text a{
+  display: none;
+
+}
+
+.contact-item-text .added-item-ph a{
+  display: block;
+  cursor: pointer;
+}
+
+.added-item-res{
+      background-image: url() !important;
+    width: 80px !important;
+    bottom: -4px !important;
+    position: absolute !important;
+    top: 58px;
+    left: 1px;
+    font-size: 19px;
+}
+
+
+.contact-item:hover .added-item-res{
+  color: rgb(71, 98, 109);
+}
+
+
+.added-item-ph{
+
+}
+
+@media only screen and (max-width: 660px) {
+
+
+
+.added-item-res{
+  font-size: 14px;
+  line-height: 18px;
+  margin-top: 5px;
+}
+}
+
