--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3209,10 +3209,14 @@ footer .social-links{
 }
 
 .schedule-items.top .schedule .address p{
+/*    margin-top: 0;
+    line-height: 26px;
+    padding-top: 2px;*/
     margin-top: 0;
     line-height: 26px;
     padding-top: 2px;
-
+    width: 90%;
+    margin: 0 auto;
 }
 
 .schedule-items.top .schedule .hours p{
