--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1002,7 +1002,8 @@ input:focus {
 .media{
   background: #425960;
   padding-top: 26px;
-  padding-bottom: 26px;
+  /*padding-bottom: 26px;*/
+  padding-bottom: 180px;
 }
 .media-header{
     background-image: url(../img/press.svg);
@@ -3280,3 +3281,12 @@ font-size: 12px;
 }
 }
 
+
+
+@media only screen and (max-width: 660px) {
+
+}
+
+/*.slideshow{
+height: 328px;
+}*/
