--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -231,7 +231,7 @@ twitter
 {% elseif block.type == "instagramFeed" %}
 
 <!-- instagram feed slideshow -->
-<section class="slideshow">
+<section class="slideshow" style="height:326px;">
     <div id="instafeed" class="owl-carousel owl-theme">
 
     </div>
