--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3270,6 +3270,11 @@ font-size: 12px;
 
 }
 
+
+.schedule-items.top .schedule .hours{
+  padding-top: 5px;
+}
+
 @media only screen and (max-width: 660px) {
 
 
