--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -149,7 +149,37 @@ twitter
 <!-- contact items -->
 <section class="contact-items">
     <div class="contact-items-container">
-<div class="contact-item">
+
+
+
+<!-- <a href="http://www.opentable.com/single.aspx?rid=98197&restref=98197"></a>
+<a href="http://www.opentable.com/single.aspx?rid=98197&restref=98197"></a>
+
+<script type='text/javascript' src='//www.opentable.com/widget/reservation/loader?rid=98197&domain=com&type=standard&theme=standard&lang=en&overlay=false&iframe=true'></script>
+<script type='text/javascript' src='//www.opentable.com/widget/reservation/loader?rid=98197&domain=com&type=wide&theme=wide&lang=en&overlay=false&iframe=true'></script> -->
+
+
+
+        <div class="contact-item">
+<div class="contact-item-text left"><div class="added-item-res">reserve<br>online</div>
+
+<span href="https://resy.com/cities/sea/mbar" id="resyButton-w6cxoffp">_</span>
+
+<!-- <span href="https://resy.com/cities/sea/mbar" id="resyButton-w6cxoffp">_</span> -->
+
+
+  <!-- <a href="" class="contact-line"> -->
+<!-- reserve -->
+<!-- <br> -->
+<!-- online -->
+
+<!-- </a> -->
+</div>
+</div>
+
+
+
+<div id="open-table-modal" class="contact-item" style="display:none;">
 <div class="contact-item-text left">
 
 <span href="https://resy.com/cities/sea/mbar" id="resyButton-w6cxoffp">_</span>
