--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -21,7 +21,7 @@
 	{% includeCssFile "css/owl.theme.green.min.css" %}
 	{% includeCssFile "css/normalize.min.css" %}
 	{% includeCssFile "css/font.css" %}
-	{% includeCssFile "css/style.min.css" %}
+	{% includeCssFile "css/style.css" %}
 </head>
 <body id ="waypointschild" class="planecursor">
 	<div id="container">
@@ -81,6 +81,16 @@ twitter
   ga('send', 'pageview');
 
 </script>
+
+<div class="open-table overlay" style="display: none;"><div class="modal"><button class="close-ot-modal">x</button>
+
+<div class="item-description-modal">
+<a href="http://www.opentable.com/single.aspx?rid=98197&restref=295054"></a>
+<a href="http://www.opentable.com/single.aspx?rid=98197&restref=295054"></a>
+<script type='text/javascript' src='//www.opentable.com/widget/reservation/loader?rid=295054&domain=com&type=standard&theme=standard&lang=en&overlay=false&iframe=true'></script>
+<script type='text/javascript' src='//www.opentable.com/widget/reservation/loader?rid=295054&domain=com&type=wide&theme=wide&lang=en&overlay=false&iframe=true'></script></div></div></div>
+
+
 
 </body>
 </html>
