--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -261,7 +261,7 @@ twitter
 {% elseif block.type == "instagramFeed" %}
 
 <!-- instagram feed slideshow -->
-<section class="slideshow" style="height:326px;">
+<section class="slideshow" style="overflow:hidden;height:326px;">
     <div id="instafeed" class="owl-carousel owl-theme">
 
     </div>
