--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -60,7 +60,9 @@ twitter
 
 </div>
 
-
+<div style="display:none;">
+<button id="dining-widget-app">res</button>
+</div>
 
 		</footer>
 	</div>
@@ -90,6 +92,21 @@ twitter
 <script type='text/javascript' src='//www.opentable.com/widget/reservation/loader?rid=295054&domain=com&type=standard&theme=standard&lang=en&overlay=false&iframe=true'></script>
 <script type='text/javascript' src='//www.opentable.com/widget/reservation/loader?rid=295054&domain=com&type=wide&theme=wide&lang=en&overlay=false&iframe=true'></script></div></div></div>
 
+<script src="https://www.sevenrooms.com/reservations/embed.js"></script>
+
+
+<script>
+
+SevenroomsWidget.init({
+      venueId: 'mbarseattle',
+      triggerId: 'dining-widget-app',
+      type: 'reservations',
+      defaultPartySize: 2,
+      defaultTime: '7:00PM',
+
+  })
+
+</script>
 
 
 </body>
