--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -99,7 +99,7 @@ twitter
 
 SevenroomsWidget.init({
       venueId: 'mbarseattle',
-      triggerId: 'dining-widget-app',
+      triggerId: 'reservembarbutton',
       type: 'reservations',
       defaultPartySize: 2,
       defaultTime: '7:00PM',
