--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -160,7 +160,7 @@ twitter
 
 
 
-        <div class="contact-item">
+        <div class="contact-item" id="reservembarbutton">
 <div class="contact-item-text left"><div class="added-item-res">reserve<br>online</div>
 
 <span href="https://resy.com/cities/sea/mbar" id="resyButton-w6cxoffp">_</span>
