--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -87,8 +87,8 @@ twitter
 <div class="open-table overlay" style="display: none;"><div class="modal"><button class="close-ot-modal">x</button>
 
 <div class="item-description-modal">
-<a href="http://www.opentable.com/single.aspx?rid=98197&restref=295054"></a>
-<a href="http://www.opentable.com/single.aspx?rid=98197&restref=295054"></a>
+<a href="https://www.opentable.com/single.aspx?rid=98197&restref=295054"></a>
+<a href="https://www.opentable.com/single.aspx?rid=98197&restref=295054"></a>
 <script type='text/javascript' src='//www.opentable.com/widget/reservation/loader?rid=295054&domain=com&type=standard&theme=standard&lang=en&overlay=false&iframe=true'></script>
 <script type='text/javascript' src='//www.opentable.com/widget/reservation/loader?rid=295054&domain=com&type=wide&theme=wide&lang=en&overlay=false&iframe=true'></script></div></div></div>
 
