--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -109,5 +109,18 @@ SevenroomsWidget.init({
 </script>
 
 
+
+
+<!-- <div id="sr-events-root" class="sr-sm sr-dark sr-#d3b316">
+  New Year's Eve Party
+</div> -->
+<script>
+  SEVENROOMS_VENUE_ID =  "mbarseattle"
+</script>
+<script src="https://www.sevenrooms.com/embed.js"></script>
+
+
+
+
 </body>
 </html>
