--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -147,9 +147,20 @@ twitter
 
 
 <!-- contact items -->
-<section class="contact-items">
-    <div class="contact-items-container">
+<section class="contact-items"  style="position:relative;">
 
+
+<div class="new-years-reserve" id="sr-events-root">
+  reserve
+</div>
+
+<div class="new-years-reserve" id="sr-events-root">
+  reserve
+</div>
+
+
+
+    <div class="contact-items-container">
 
 
 <!-- <a href="http://www.opentable.com/single.aspx?rid=98197&restref=98197"></a>
