new years button

--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -119,7 +119,16 @@ SevenroomsWidget.init({
 </script>
 <script src="https://www.sevenrooms.com/embed.js"></script>
 
+<script>
 
+$('#second-button').click(function(){
+
+
+  $("#sr-events-root").click();
+
+});
+
+</script>
 
 
 </body>
