--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -154,7 +154,7 @@ twitter
   reserve
 </div>
 
-<div class="new-years-reserve" id="sr-events-root">
+<div class="new-years-reserve" id="second-button">
   reserve
 </div>
 
