remove new year reserve

--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -151,11 +151,11 @@ twitter
 
 
 <div class="new-years-reserve" id="sr-events-root">
-  reserve
+  <!-- reserve -->
 </div>
 
 <div class="new-years-reserve" id="second-button">
-  reserve
+  <!-- reserve -->
 </div>
 
 
